Implement async checking